# ssrq-retro-lab

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  spacy_config.cfg
data/ZG/: openai_classification_validation.jsonl  openai_ocr_validation.jsonl  openai_splitting_validation.jsonl  openai_training_data.jsonl  txt_to_pdf.json
data/ZG/examples/: few-shot-article-lines.json  few-shot-ner.json
data/ZG/master/: ZG_1_1_0.txt  ZG_1_1_0_classified.txt  ZG_1_1_0_splitted.txt  ZG_1_1_1.txt  ZG_1_1_10.txt  ZG_1_1_10_classified.txt  ZG_1_1_10_splitted.txt  ZG_1_1_11.txt  ZG_1_1_11_classified.txt  ZG_1_1_11_splitted.txt  ZG_1_1_12.txt  ZG_1_1_12_classified.txt  ZG_1_1_12_splitted.txt  ZG_1_1_13.txt  ZG_1_1_13_classified.txt  ZG_1_1_13_splitted.txt  ZG_1_1_14.txt  ZG_1_1_14_classified.txt  ZG_1_1_14_splitted.txt  ZG_1_1_15.txt  ZG_1_1_15_classified.txt  ZG_1_1_15_splitted.txt  ZG_1_1_1_classified.txt  ZG_1_1_1_splitted.txt  ZG_1_1_2.txt  ZG_1_1_2_classified.txt  ZG_1_1_2_splitted.txt  ZG_1_1_3.txt  ZG_1_1_3_classified.txt  ZG_1_1_3_splitted.txt  ZG_1_1_4.txt  ZG_1_1_4_classified.txt  ZG_1_1_4_splitted.txt  ZG_1_1_5.txt  ZG_1_1_5_classified.txt  ZG_1_1_5_splitted.txt  ZG_1_1_6.txt  ZG_1_1_6_classified.txt  ZG_1_1_6_splitted.txt  ZG_1_1_7.txt  (+117 more)
data/ZG/toc/: ZG_1-1.xml  ZG_1-2.xml
data/export/: ZG_1_1.txt  ZG_1_2.txt
model/: ssrq_mistral_ocr_adapter.npz
notebooks/: create_single_line_ocr_training.ipynb  create_training_data.ipynb  demo-components.ipynb  demo-extraction.ipynb  extract_pdf_text.ipynb  finetune_mistral.ipynb  finetune_openai.ipynb  finetune_openai_ocr_v2.ipynb  split_transkribus_exports.ipynb  validate_finetuned_openai_model.ipynb  validate_ocr_gpt_3_v2.ipynb  viz.ipynb
notebooks/pkl_cache/: ocr_line_based_training.pkl  ocr_quality.pkl  openai_finetune_ocr_validation_v2.pkl  openai_ocr_correction_validation_v1.pkl  openai_splitting_validation_v1.pkl  openai_text_cat_validation_v1.pkl
src/ssrq_retro_lab/: __about__.py  __init__.py  app.py  config.py
src/ssrq_retro_lab/pipeline/: chain.py
src/ssrq_retro_lab/repository/: reader.py  writer.py
src/ssrq_retro_lab/train/: data.py  messages.py  stats.py  train.py  validation.py
tests/pipeline/: test_chain.py
tests/train/: test_data.py
tests/utils/: test_split_exports.py
(+34 files in other folders)
